# db-eplusout-reader

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: run-build.yml  run-tests.yml
db_eplusout_reader/: __init__.py  db_esofile.py  get_results.py  results_dict.py  sql_reader.py
db_eplusout_reader/processing/: esofile_reader.py  esofile_time.py
tests/: test_eso_file.py  test_results_dictionary.py  test_sql_results.py
